feature: update post
